--- a/src/Components/Betting.css
+++ b/src/Components/Betting.css
@@ -1,3 +1,30 @@
+button {
+    background-color: var(--secondary-color);
+    color: var(--main-compliment-color);
+    padding: 1.2rem;
+    text-align: center;
+    border: none;
+    box-shadow: 0.2rem 0.3rem var(--main-accent-color);
+}
+
+button:active {
+    position: relative;
+    top: 2px;
+    box-shadow: 0.1rem 0.2rem var(--main-accent-color);
+}
+
 button:hover {
     cursor: pointer;
+    position: relative;
+    top: 0.1rem;
+}
+
+.active-player button {
+    color: white;
+}
+
+.non-active-player button {
+    color: black;
+    background-color: var(--secondary-accent-color);
+    pointer-events: none;
 }
