--- a/src/Components/Player.css
+++ b/src/Components/Player.css
@@ -2,8 +2,8 @@
     background-color: var(--main-compliment-color);
     box-shadow: 2px 3px var(--main-accent-color);
     color: black;
-    margin: 3.5rem 2rem 0.5rem 2rem;
-    padding: 2rem;
+    margin: 3.5rem 0.2rem 0.5rem 2rem;
+    padding: 1rem;
     width: 80%;
     display: flex;
     justify-content: center;
@@ -18,8 +18,8 @@
 }
 
 .player > .image-wrapper {
-    width: 7rem;
-    height: 7rem;
+    height: 4rem;
+    width: 4rem;
     overflow: hidden;
     border-radius: 50%;
     border: 3px solid var(--main-accent-color);
@@ -42,11 +42,11 @@ img {
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 25rem;
+    width: 20rem;
 }
 
 .player-container p {
-    margin: 0.7rem;
+    margin: 0.1rem 0.5rem;
 }
 
 .active::after {
