--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -20,6 +20,8 @@
     text-align: center;
     font-size: 70px;
     font-weight: 700;
+    position: relative;
+    bottom: 9rem;
 }
 
 .card-face .top-left::after {
