--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -4,7 +4,7 @@
     height: 22rem;
     background-color: var(--main-compliment-color);
     border: 2px solid var(--main-accent-color);
-    margin: 0 1rem;
+    margin: 1rem 1rem;
     box-shadow: 3px 4px var(--main-accent-color);
     font-size: 25px;
 }
